[gd_scene load_steps=2 format=3 uid="uid://dgmbqblpnaqno"]

[ext_resource type="Script" uid="uid://cb4bkbke11p8w" path="res://editor/timeline/track_header_ui.gd" id="1_header"]

[node name="TrackHeaderUI" type="PanelContainer"]
custom_minimum_size = Vector2(180, 120)
script = ExtResource("1_header")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TrackName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Track Name"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "M"

[node name="SoloButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "S"
